--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -50,3 +50,11 @@
     color: var(--red);
     transition: all .75s;
 }
+
+@media screen and (max-width: 768px){
+    
+    .home{
+      width: 100%;
+      flex-direction: column;
+    }
+}
