--- a/src/pages/Page404/Page404.module.css
+++ b/src/pages/Page404/Page404.module.css
@@ -19,3 +19,11 @@
     
     font-size: 1.5rem;
 }
+
+@media screen and (max-width: 768px){
+    
+    .textos{
+      width: 100%;
+      flex-direction: column;
+    }
+}
