--- a/src/pages/Projetos/Projetos.module.css
+++ b/src/pages/Projetos/Projetos.module.css
@@ -12,3 +12,10 @@
     margin-block: 2rem;
 }
 
+@media screen and (max-width: 768px){
+    
+    .lista{
+      width: 100%;
+      flex-direction: column;
+    }
+}
