--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
 
-    padding-block: 1rem;
+    padding-block: 30px;
     gap:1rem;
+    
 }
+
