--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,4 +9,20 @@
     display:flex;
     align-items: center;
     justify-content: center;
+
+    position: fixed;
+    bottom: 0;
+}
+
+@media (max-width:768px){
+    .footer{
+        font-size:0.75rem;
+    }
+}
+
+
+@media (max-wodth:480px){
+    .footer{
+        font-size:0.75;
+    }
 }
