--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,9 @@
     display:flex;
     align-items:center;
     justify-content:space-around;
+
+    position:fixed;
+    top:0;
 }
 
 .header span{
@@ -26,11 +29,45 @@
     transition: all 0.5s;
 }
 
-
-@media screen and (max-width: 768px){
+@media(max-width:768px){
+    .menuButton{
+        width: 30px;
+        height: 30px;
+        position:absolute;
+        right: 20px;    
+        cursor:pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
     
-    .header{
-      width: 100%;
-      flex-direction: column;
+    .linha{
+        display:block;
+        width: 100%;
+        height: 2px;
+        background-color:white;
+    }
+    .menuSandwich{
+        display: none;
+    }
+
+    .show{
+        display:flex;
+        width: 50%;
+        height: auto;
+        position: absolute;
+        top:50px;
+        right: 0;
+        background-color: var(--primary);
+        flex-direction: column;
+        padding:20px;
+        gap:1rem;
+    }
+}
+
+@media(max-width:480px) {
+    .show{
+        width: 100%;
     }
 }
