--- a/src/pages/Contatos/Contatos.module.css
+++ b/src/pages/Contatos/Contatos.module.css
@@ -21,3 +21,15 @@
     font-size: 3.5rem;
     color:var(--red);
 }
+
+@media(max-width:768px){
+    .contatos{
+        padding-inline: 20px;
+    }
+}
+
+@media(max-width:480px){
+    .icones{
+        gap: 0.5rem;
+    }
+}
