--- a/src/pages/Page404/Page404.module.css
+++ b/src/pages/Page404/Page404.module.css
@@ -1,5 +1,15 @@
+.page404{
+    width: 100%;
+    height: 85vh;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .titulo2 {
     padding-top: 2rem;
+    text-align: center;
 }
 
 .textos {
@@ -20,10 +30,21 @@
     font-size: 1.5rem;
 }
 
-@media screen and (max-width: 768px){
-    
-    .textos{
-      width: 100%;
-      flex-direction: column;
+@media (max-width:768px){
+    .texto_grande{
+        font-size:150px;
+    }
+    .texto_vermelho{
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width:480px){
+    .texto_grande{
+        font-size: 75px;
+    }
+    .texto_vermelho{
+        font-size: 0.5rem;
     }
 }
