--- a/src/pages/Projetos/Projetos.module.css
+++ b/src/pages/Projetos/Projetos.module.css
@@ -1,3 +1,6 @@
+.projetos{
+    padding-block: 2.5rem;
+}
 .projetos h2{
     text-align: center;
 }
@@ -12,10 +15,3 @@
     margin-block: 2rem;
 }
 
-@media screen and (max-width: 768px){
-    
-    .lista{
-      width: 100%;
-      flex-direction: column;
-    }
-}
