--- a/src/pages/Sobre/Sobre.module.css
+++ b/src/pages/Sobre/Sobre.module.css
@@ -4,6 +4,9 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content:center;
+    padding-block: 40px;
+
 }
 
 .bio{
@@ -58,10 +61,23 @@
     color:red;
 }
 
-@media screen and (max-width: 768px){
-    
+@media(max-width:768px){
+    .bio{
+        flex-direction: column;
+        padding-inline:20px;
+        gap:1rem;
+    }
+    .bio img{
+        max-width: 50%;
+    }
+}
+
+
+@media(max-width:480px){
     .icones{
-      width: 100%;
-      flex-direction: column;
+        gap:0.5rem;
+    }
+    .icones img{
+        height:40px;
     }
 }
